--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -4,6 +4,8 @@
 [type="tel"],
 [type="number"],
 [type="date"],
+[type="email"],
+[type="password"],
 select,
 textarea {
   border: $border $light;
